Use .service.exe extension for service binaries on Windows

This is a simple solution to avoid conflicting ILK filenames
generated by the linker, which apparently just strips the
output file extension.

BUG=673521
TBR=ben@chromium.org

Review-Url: https://codereview.chromium.org/2578183003
Cr-Commit-Position: refs/heads/master@{#438935}

Former-commit-id: f5230da72019de8ae225833e75e94519cad77232